fixed bug which caused overflow on samsung internet

--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,14 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     box-sizing: border-box;
 }
 
 /* TODO: adjust breakpoints */
 @media screen and (max-width: 768px) {
-    body {
+    html, body {
         overflow-x: hidden;
     }
 }
